--- a/index.html
+++ b/index.html
@@ -326,12 +326,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{unitok,
-      title={UniTok: A Unified Tokenizer for Visual Generation and Understanding},
-      author={Ma, Chuofan and Jiang, Yi and Wu, Junfeng and Yang, Jihan and Yu, Xin and Yuan, Zehuan and Peng, Bingyue and Qi, Xiaojuan},
-      year={2025},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
-    }
+  title={UniTok: A Unified Tokenizer for Visual Generation and Understanding},
+  author={Ma, Chuofan and Wu, Junfeng and Jiang, Yi and Yang, Jihan and Yu, Xin and Yuan, Zehuan and Peng, Bingyue and Qi, Xiaojuan},
+  journal={arXiv preprint arXiv:2502.20321},
+  year={2025}
 }</code></pre>
   </div>
 </section>
